kafka/day-1-fundamentals-internals/deployment-options/vms/terraform/azure/dev-env/dependencies.tf
# azure provider
provider "azurerm" {
    subscription_id = "495322cb-95ae-4e66-b31d-1ea25d0b4ada"
    client_id       = "eed98ee9-966f-492c-a950-bf2bf757f9ad"
    client_secret   = "2a6e4605-cfbe-4bbf-9af8-83e5c19da2c9"
    tenant_id       = "876c68e8-02d9-4abc-912e-4b9d8fc61c1e"
    features {}
}

# resource group
resource "azurerm_resource_group" "rg" {
name     = "${var.prefix}-rg"
location = "eastus2"
}

# virtual network
resource "azurerm_virtual_network" "vn" {
  name                = "${var.prefix}-network"
  location            = "${azurerm_resource_group.rg.location}"
  resource_group_name = "${azurerm_resource_group.rg.name}"
  address_space       = ["10.0.0.0/16"]
}

# security group
resource "azurerm_network_security_group" "sg" {
  name                = "${azurerm_resource_group.rg.name}-mgmt-nsg"
  location            = "${azurerm_resource_group.rg.location}"
  resource_group_name = "${azurerm_resource_group.rg.name}"

  security_rule {
    name                       = "ssh"
    description                = "ssh"
    priority                   = 100
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "*"
    source_port_range          = "*"
    destination_port_range     = "22"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "inter-broker"
    description                = "inter-broker"
    priority                   = 110
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "*"
    source_port_range          = "*"
    destination_port_range     = "9091"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "client-broker"
    description                = "client-broker"
    priority                   = 120
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "*"
    source_port_range          = "*"
    destination_port_range     = "9092"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "control-center"
    description                = "control-center"
    priority                   = 130
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "*"
    source_port_range          = "*"
    destination_port_range     = "9021"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "connect-rest-api"
    description                = "connect-rest-api"
    priority                   = 140
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "*"
    source_port_range          = "*"
    destination_port_range     = "8083"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "ksql-rest-api"
    description                = "ksql-rest-api"
    priority                   = 150
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "*"
    source_port_range          = "*"
    destination_port_range     = "8088"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "rest-proxy"
    description                = "rest-proxy"
    priority                   = 160
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "*"
    source_port_range          = "*"
    destination_port_range     = "8082"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "schema-registry-rest-api"
    description                = "schema-registry-rest-api"
    priority                   = 170
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "*"
    source_port_range          = "*"
    destination_port_range     = "8081"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "zookeeper_1"
    description                = "zookeeper_1"
    priority                   = 180
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "*"
    source_port_range          = "*"
    destination_port_range     = "2181"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "zookeeper_2"
    description                = "zookeeper_2"
    priority                   = 190
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "*"
    source_port_range          = "*"
    destination_port_range     = "2888"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "zookeeper_3"
    description                = "zookeeper_3"
    priority                   = 200
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "*"
    source_port_range          = "*"
    destination_port_range     = "3888"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "jolokia"
    description                = "jolokia"
    priority                   = 210
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "*"
    source_port_range          = "*"
    destination_port_range     = "7771"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
}

# subnet
resource "azurerm_subnet" "sb" {
  name                      = "${azurerm_resource_group.rg.name}-subnet"
  virtual_network_name      = "${azurerm_virtual_network.vn.name}"
  resource_group_name       = "${azurerm_resource_group.rg.name}"
  address_prefix            = "10.0.0.128/25"
  # azurerm_network_interface_security_group_association = "${azurerm_network_security_group.sg.id}"
}
